# bazel_maven_repository

./: .bazelignore  .gitignore  .travis.yaml  .travis.yml  CONTRIBUTING.md  README.md  WORKSPACE
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  main.yml
kramer/: .bazelignore  .bazelrc  BUILD.bazel  README.md  WORKSPACE  jarjar.bzl  kramer.jarjar
kramer/src/main/kotlin/kramer/: Aars.kt  BUILD.bazel  Common.kt  Compatibility.kt  Configuration.kt  FetchArtifactCommand.kt  GenerateMavenRepo.kt  GenerateMavenRepoCommand.kt  Jetifier.kt  Kramer.kt  MavenRepo.kt  MavenRepoErrors.kt  RepoConfig.kt  ResolveArtifact.kt  ResolveArtifactCommand.kt  ResolveOne.kt  Templates.kt
kramer/src/test/kotlin/kramer/: BUILD.bazel  CommonTest.kt  ConfigurationTest.kt  JetifierTest.kt  KontextTest.kt
kramer/src/test/kotlin/kramer/integration/: BUILD.bazel  FetchArtifactIntegrationTest.kt  GenerateMavenRepoIntegrationTest.kt  KramerIntegrationTest.kt  TestUtils.kt  kramer-config.json  kramer-large-config.json  mirror-settings.json  test-aar-libs-config.json  test-android-support-check-disabled-config.json  test-android-support-config.json  test-build-snippet-config.json  test-compatibility-aliases-config.json  test-duplicate-deps-config.json  test-excludes-failure-config.json  test-excludes-success-config.json  test-include-config.json  test-jetifier-config.json  test-jetifier-map-config.json  test-jetifier-map-missing-artifact-config.json  test-large-config.json  test-optional-config.json  test-overconfigured-config.json  test-replace-deps-config.json  test-simple-config.json  test-unhandled-packaging-config.json
maven/: BUILD  BUILD.bazel  artifacts.bzl  constants.bzl  exec.bzl  fetch.bzl  globals.bzl  jetifier.bzl  jvm.bzl  maven.bzl  packaging_type.bzl  poms.bzl  sets.bzl  utils.bzl  xml.bzl
maven/tests/: BUILD.bazel  all_tests.bzl  dicts_test.bzl  fetch_test.bzl  globals_test.bzl  maven_test.bzl  noop.sh  paths_test.bzl  poms_for_testing.bzl  poms_merging_test.bzl  poms_test.bzl  sets_test.bzl  strings_test.bzl  testing.bzl  xml_test.bzl
test/test_workspace/: .bazelrc  BUILD.bazel  WORKSPACE  build_substitution_templates.bzl  travis.bazelrc
test/test_workspace/android/: BUILD.bazel
test/test_workspace/android/src/main/: AndroidManifest.xml
test/test_workspace/android/src/main/java/blah/: Blah.kt
test/test_workspace/android/src/main/res/values/: strings.xml
test/test_workspace/android/src/main/res/values-es/: strings.xml
test/test_workspace/java/blah/: AndroidManifest.xml  BUILD.bazel  Blah.java
test/test_workspace/java/foo/: BUILD.bazel  Bar.kt  Blah.java  Foo.java
test/test_workspace/javatests/blah/: BUILD.bazel  BlahTest.java
test/test_workspace/javatests/foo/: BUILD.bazel  BarTest.kt  FooTest.java
tools/: .travis.linux  .travis.osx  bazel-0.26.1-installer-darwin-x86_64.sh.sha256  bazel-0.27.0-installer-darwin-x86_64.sh.sha256  bazel-0.27.1-installer-darwin-x86_64.sh.sha256  bazel-0.27.2-installer-darwin-x86_64.sh.sha256  bazel-0.28.0-installer-darwin-x86_64.sh.sha256  bazel_0.21.0-linux-x86_64.deb.sha256  bazel_0.25.2-linux-x86_64.deb.sha256  bazel_0.26.1-linux-x86_64.deb.sha256  bazel_0.27.1-linux-x86_64.deb.sha256  bazel_0.27.2-linux-x86_64.deb.sha256  bazel_0.28.0-linux-x86_64.deb.sha256  install_android_studio.sh  install_bazelisk.sh  release_binary.sh
