#
# Copyright (C) 2020 Square, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
#
load(":jarjar.bzl", "jar_jar")

java_binary(
    name = "kramer_bin",
    main_class = "kramer.KramerKt",
    visibility = ["//visibility:public"],
    runtime_deps = [
        "//src/main/kotlin/kramer",
    ],
)

jar_jar(
    name = "kramer_shaded",
    input_jar = ":kramer_bin_deploy.jar",
    rules = "kramer.jarjar",
    visibility = ["//visibility:public"],
)

java_binary(
    name = "jarjar_runner",
    main_class = "org.pantsbuild.jarjar.Main",
    visibility = ["//visibility:public"],
    runtime_deps = ["@maven//org/pantsbuild:jarjar"],
)
