load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_android_library")

package(default_visibility = ["//:__subpackages__"])

kt_android_library(
    name = "library",
    srcs = ["src/main/java/blah/Blah.kt"],
    custom_package = "android.blah",
    manifest = "src/main/AndroidManifest.xml",
    resource_files = glob(["src/main/res/**"]),
    deps = [
        "//java/foo",
        "@maven//androidx/core",
        # "@maven//com/helpshift:android-helpshift-aar",
    ],
)

android_binary(
    name = "app",
    custom_package = "android.blah",
    manifest = "src/main/AndroidManifest.xml",
    multidex = "native",
    deps = [":library"],
)
