package(default_visibility = ["//:__subpackages__"])

android_library(
    name = "blah",
    srcs = ["Blah.java"],
    manifest = "AndroidManifest.xml",
    deps = [
        "@maven//androidx/arch/core:core_runtime",  # Use the legacy mangling alias.
        "@maven//javax/annotation:jsr250-api",
    ],
)
