load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = ["//:__subpackages__"])

kt_jvm_library(
    name = "foo",
    srcs = [
        "Bar.kt",
        "Foo.java",
    ],
    deps = [
        ":blah",
        "@maven//com/google/auto/value",
        "@maven//com/google/dagger",
        "@maven//com/google/guava",
        "@maven//javax/inject:javax_inject",
    ],
)

java_library(
    name = "blah",
    srcs = ["Blah.java"],
    deps = [
        "@maven//io/reactivex/rxjava2:rxjava",
    ],
)