#
# Copyright (C) 2020 Square, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
#
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

package(default_visibility = ["//:__subpackages__"])

kt_jvm_library(
    name = "foo",
    srcs = [
        "Bar.kt",
        "Foo.java",
    ],
    deps = [
        ":blah",
        "@maven//com/google/auto/value",
        "@maven//com/google/dagger",
        "@maven//com/google/guava",
    ],
)

java_library(
    name = "blah",
    srcs = ["Blah.java"],
    deps = [
        "@maven//io/reactivex/rxjava2:rxjava",
    ],
)
