load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "BarTest",
    srcs = ["BarTest.kt"],
    test_class = "foo.BarTest",
    deps = [
        "//java/foo",
        "@maven//junit",
        "@maven//org/jetbrains/kotlin:kotlin_test",
    ],
)

java_test(
    name = "FooTest",
    srcs = ["FooTest.java"],
    deps = [
        "//java/foo",
        "@maven//junit",
    ],
)
