load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

package(default_visibility = ["//:__subpackages__"])

kt_jvm_test(
    name = "BarTest",
    srcs = ["BarTest.kt"],
    test_class = "foo.BarTest",
    deps = [
        "//java/foo",
        "@maven//junit",
        "@maven//org/jetbrains/kotlin:kotlin-test",
    ],
)

java_test(
    name = "FooTest",
    srcs = ["FooTest.java"],
    deps = [
        "//java/foo",
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)
