#
# Copyright (C) 2020 Square, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
#
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_library")

kt_jvm_library(
    name = "kramer",
    srcs = glob(["*.kt"]),
    visibility = ["//visibility:public"],
    deps = [
        "@maven//com/github/ajalt/clikt:clikt-jvm",
        "@maven//com/google/guava",
        "@maven//com/squareup/moshi",
        "@maven//com/squareup/moshi:moshi-kotlin",
        "@maven//com/squareup/tools/build:maven-archeologist",
        "@maven//org/jetbrains/kotlin:kotlin-stdlib",
        "@maven//org/jetbrains/kotlinx:kotlinx-coroutines-core",
    ],
)
