#
# Copyright (C) 2020 Square, Inc.
#
# Licensed under the Apache License, Version 2.0 (the "License"); you may not use this file except
# in compliance with the License. You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software distributed under the License
# is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express
# or implied. See the License for the specific language governing permissions and limitations under
# the License.
#
load("@io_bazel_rules_kotlin//kotlin:kotlin.bzl", "kt_jvm_test")

kt_jvm_test(
    name = "CommonTest",
    srcs = ["CommonTest.kt"],
    associates = ["//src/main/kotlin/kramer"],
    test_class = "kramer.CommonTest",
    deps = [
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)

kt_jvm_test(
    name = "ConfigurationTest",
    srcs = ["ConfigurationTest.kt"],
    associates = ["//src/main/kotlin/kramer"],
    test_class = "kramer.ConfigurationTest",
    deps = [
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)

kt_jvm_test(
    name = "JetifierTest",
    srcs = ["JetifierTest.kt"],
    associates = ["//src/main/kotlin/kramer"],
    test_class = "kramer.JetifierTest",
    deps = [
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)

kt_jvm_test(
    name = "KontextTest",
    srcs = ["KontextTest.kt"],
    associates = ["//src/main/kotlin/kramer"],
    test_class = "kramer.KontextTest",
    deps = [
        "@maven//com/google/truth",
        "@maven//junit",
    ],
)
